--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,20 +11,23 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="@string/data_text" />
+        android:text="@string/data_text"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/need"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="@string/need_text" />
+        android:text="@string/need_text"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/optimize"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="@string/optimize" />
+        android:text="@string/optimize"
+        android:textSize="20sp" />
 
 </LinearLayout>
