--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.fx.cows_feeding_config.MainActivity">
+    tools:context="com.example.fx.cows_feeding_config.activity.MainActivity">
 
     <Button
         android:id="@+id/data"
