--- a/app/src/main/res/layout/activity_cow.xml
+++ b/app/src/main/res/layout/activity_cow.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.fx.cows_feeding_config.activity.NeedActivity">
+    tools:context="com.example.fx.cows_feeding_config.activity.CowActivity">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="need"/>
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:text="need"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp" />
 
 </android.support.constraint.ConstraintLayout>
