--- a/app/src/main/res/layout/activity_fodder.xml
+++ b/app/src/main/res/layout/activity_fodder.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.fx.cows_feeding_config.activity.FodderActivity">
 
-    <TextView
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:text="data"/>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.v4.view.ViewPager>
+
+</LinearLayout>
