--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.fx.cows_feeding_config.activity.MainActivity">
 
     <Button
-        android:id="@+id/data"
+        android:id="@+id/btn_fodder"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -15,7 +15,7 @@
         android:textSize="20sp" />
 
     <Button
-        android:id="@+id/need"
+        android:id="@+id/btn_cow"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -23,7 +23,7 @@
         android:textSize="20sp" />
 
     <Button
-        android:id="@+id/optimize"
+        android:id="@+id/btn_optimize"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
