--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,7 +6,7 @@
     android:gravity="center">
 
     <TextView
-        android:id="@+id/tv_fodder_name"
+        android:id="@+id/tv_1"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_weight="1"
@@ -14,7 +14,7 @@
         android:textSize="15sp" />
 
     <TextView
-        android:id="@+id/tv_fodder_type"
+        android:id="@+id/tv_2"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_weight="1"
@@ -22,7 +22,7 @@
         android:textSize="15sp" />
 
     <TextView
-        android:id="@+id/tv_fodder_price"
+        android:id="@+id/tv_3"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_weight="1"
