--- a/app/src/main/res/layout/activity_fodder_add.xml
+++ b/app/src/main/res/layout/activity_fodder_add.xml
@@ -24,13 +24,11 @@
                 android:text="@string/name_text"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_name"
+            <EditText
+                android:id="@+id/et_name"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -47,13 +45,12 @@
                 android:text="@string/type_text"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_type"
+            <Spinner
+                android:id="@+id/sp_type"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:entries="@array/spinner_array" />
 
         </LinearLayout>
 
@@ -70,13 +67,11 @@
                 android:text="@string/dry_matter_text"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_dry_matter"
+            <EditText
+                android:id="@+id/et_dry_matter"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -93,13 +88,11 @@
                 android:text="@string/calcium_text"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_calcium"
+            <EditText
+                android:id="@+id/et_calcium"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -116,13 +109,11 @@
                 android:text="@string/phosphorus_text"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_phosphorus"
+            <EditText
+                android:id="@+id/et_phosphorus"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -139,13 +130,11 @@
                 android:text="@string/energy_text"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_energy"
+            <EditText
+                android:id="@+id/et_energy"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -162,13 +151,11 @@
                 android:text="@string/crude_protein_text"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_crude_protein"
+            <EditText
+                android:id="@+id/et_crude_protein"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -185,13 +172,19 @@
                 android:text="@string/price_text"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tv_price"
+            <EditText
+                android:id="@+id/et_price"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
 
         </LinearLayout>
 
@@ -201,14 +194,10 @@
             android:orientation="horizontal">
 
             <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:id="@+id/btn_submit"
+                android:text="@string/submit_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
