--- a/app/src/main/res/layout/activity_fodder_info.xml
+++ b/app/src/main/res/layout/activity_fodder_info.xml
@@ -201,11 +201,15 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/btn_change"
+                android:text="@string/change_text"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
             <Button
+                android:id="@+id/btn_delete"
+                android:text="@string/delete_text"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
