--- a/app/src/main/res/layout/activity_cow.xml
+++ b/app/src/main/res/layout/activity_cow.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.fx.cows_feeding_config.activity.CowActivity">
+    tools:context="com.example.fx.cows_feeding_config.activity.cow.CowActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,5 +41,11 @@
         android:layout_weight="1">
 
     </android.support.v7.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/btn_add_cow"
+        android:text="@string/add_text"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
 
 </LinearLayout>
