--- a/app/src/main/res/layout/activity_fodder.xml
+++ b/app/src/main/res/layout/activity_fodder.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.fx.cows_feeding_config.activity.FodderActivity">
+    tools:context="com.example.fx.cows_feeding_config.activity.fodder.FodderActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
