--- a/app/src/main/res/layout/activity_fodder_add.xml
+++ b/app/src/main/res/layout/activity_fodder_add.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.fx.cows_feeding_config.activity.FodderInfoActivity">
+    tools:context="com.example.fx.cows_feeding_config.activity.fodder.FodderInfoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -194,7 +194,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btn_submit"
+                android:id="@+id/btn_submit_fodder"
                 android:text="@string/submit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
