--- a/app/src/main/res/layout/activity_fodder_info.xml
+++ b/app/src/main/res/layout/activity_fodder_info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.fx.cows_feeding_config.activity.FodderInfoActivity">
+    tools:context="com.example.fx.cows_feeding_config.activity.fodder.FodderInfoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -201,14 +201,14 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btn_change"
+                android:id="@+id/btn_change_fodder"
                 android:text="@string/change_text"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/btn_delete"
+                android:id="@+id/btn_delete_fodder"
                 android:text="@string/delete_text"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
