--- a/app/src/main/res/layout/activity_optimize.xml
+++ b/app/src/main/res/layout/activity_optimize.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.fx.cows_feeding_config.activity.optimize.OptimizeActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btn_select_cow"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="optimize"/>
+        android:layout_height="50dp"
+        android:text="@string/select_cow_text"
+        android:textSize="18sp" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
