--- a/app/src/main/res/layout/activity_optimize.xml
+++ b/app/src/main/res/layout/activity_optimize.xml
@@ -62,7 +62,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:gravity="center"
             android:text="@string/select_variable_text" />
 
@@ -81,11 +81,13 @@
         android:layout_height="50dp">
 
         <Button
+            android:id="@+id/btn_1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
         <Button
+            android:id="@+id/btn_2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
