--- a/app/src/main/res/layout/info_item.xml
+++ b/app/src/main/res/layout/info_item.xml
@@ -38,6 +38,7 @@
         android:id="@+id/sp_variable"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_weight="1" />
+        android:layout_weight="2"
+        android:entries="@array/variable_array" />
 
 </LinearLayout>
