--- a/app/src/main/res/layout/activity_optimize.xml
+++ b/app/src/main/res/layout/activity_optimize.xml
@@ -81,13 +81,8 @@
         android:layout_height="50dp">
 
         <Button
-            android:id="@+id/btn_1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/btn_2"
+            android:text="@string/LP_text"
+            android:id="@+id/btn_LP"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
