--- a/app/src/main/res/layout/activity_fodder_add.xml
+++ b/app/src/main/res/layout/activity_fodder_add.xml
@@ -85,6 +85,48 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:text="@string/crude_protein_text"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_crude_protein"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/energy_text"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_energy"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/calcium_text"
                 android:textSize="20sp" />
 
@@ -127,11 +169,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/energy_text"
+                android:text="@string/sodium_text"
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/et_energy"
+                android:id="@+id/et_sodium"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
@@ -148,11 +190,95 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/crude_protein_text"
+                android:text="@string/chlorine_text"
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/et_crude_protein"
+                android:id="@+id/et_chlorine"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/potassium_text"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_potassium"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/magnesium_text"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_magnesium"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/sulphur_text"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_sulphur"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/crude_fat_text"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_crude_fat"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
@@ -195,9 +321,9 @@
 
             <Button
                 android:id="@+id/btn_submit_fodder"
-                android:text="@string/submit_text"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:text="@string/submit_text" />
 
         </LinearLayout>
 
